<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_send_money"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary" />

    <TextView
        android:id="@+id/tv_send_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_balance"
        android:textSize="14sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/et_recipient_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_search_field"
        android:hint="@string/hint_acc_holder"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <EditText
        android:id="@+id/et_acc_number"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_search_field"
        android:hint="@string/hint_acc_number"
        android:inputType="number"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_search_field"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <Button
        android:id="@+id/btn_transfer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_transfer"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white" />

</LinearLayout>